Add function Displayname

--- a/LezioneHTML/index.html
+++ b/LezioneHTML/index.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Buongiorno</h2>
+<!-- I tab H stanno per Headings e sono numerati da 1 a 6 in ordine di importanza -->
+<h1>Buongiorno</h1>
+<br>
+<label for="nome">Nome</label>
+<input type="text" id="nome">
+<button onclick="displayname()">Invia</button>
+<br>
+<tag id="tagnome"></tag>
+
 </body>
+<script src="main.js"></script>
 </html>
