--- a/LezioneHTML/index.html
+++ b/LezioneHTML/index.html
@@ -6,14 +6,27 @@
 </head>
 <body>
 <!-- I tab H stanno per Headings e sono numerati da 1 a 6 in ordine di importanza -->
-<h1>Buongiorno</h1>
+<h1>LA TUA BANCA</h1>
+<br>
+<img src="img/Jhon_cena.webp" width="700" height="150">
+<h3>IL SITO DELLA TUA BANCA: INSERISCI I TUOI DATI</h3>
+<img src="img/JEW.jpg" width="100" height="120">
 <br>
 <label for="nome">Nome</label>
 <input type="text" id="nome">
-<button onclick="displayname()">Invia</button>
-<br>
-<tag id="tagnome"></tag>
 
+<label for="password">Password</label>
+<input type="password" id="password">
+<br>
+<label for="carta"><strong>Numero della carta</strong></label>
+<input type="number" id="carta">
+<label for="carta">CVV</label>
+<input type="number" id="cvv">
+
+<button onclick="displayname()">Invia</button>
+
+<br>
+<ul id="tagnome"></ul>
 </body>
 <script src="main.js"></script>
 </html>
