--- a/LezioneHTML/index.html
+++ b/LezioneHTML/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>sei fregato</title>
 </head>
 <body>
 <!-- I tab H stanno per Headings e sono numerati da 1 a 6 in ordine di importanza -->
