Add codicecatastale TODO:codice di controllo

--- a/TPI/JS/CALCOLACF/index.html
+++ b/TPI/JS/CALCOLACF/index.html
@@ -14,16 +14,12 @@
 <label for="sesso">Sesso</label>
 <select id="sesso">
     <option value="0">M</option>
-    <option value="30">F</option>
+    <option value="40">F</option>
 </select>
-<label for="luogo">Luogo di nascita</label>
-<select id="luogo">
-    <option>Brescia</option>
-    <option>Bergamo</option>
-    <option>Milano</option>
-    <option>Foggia</option>
+<label for="comuniDropdown">Luogo di nascita</label>
+        <select id="comuniDropdown">
 </select>
 <button id="btn" onclick="calcola()">Calcola</button>
-<script src="main.js"></script>
+<script src="main.js"> caricaDropdown() </script>
 </body>
 </html>
